k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zegreo-web
  namespace: zegreo
spec:
  selector:
    app: zegreo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
